# lyrics-collection

./: .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: convert-lyrics.yml
ass/Anthos/TV 『華Doll_ -Reinterpretation of Flowering-』OP主題歌「Clockwork Flowers」/: 1-01 Clockwork Flowers.ass
ass/SG/LUCID DREAM/: 01 LUCID DREAM.ass
ass/ひとしずくP×やま△/If the World 2/: 1-01 海賊Ｆの肖像.ass
ass/上月せれな/家でYeah!ってアゲタイガー/: 1-01 家でYeah!ってアゲタイガー.ass
compiled/Anthos/TV 『華Doll_ -Reinterpretation of Flowering-』OP主題歌「Clockwork Flowers」/: 1-01 Clockwork Flowers.lrc
compiled/SG/LUCID DREAM/: 01 LUCID DREAM.lrc
compiled/Shiraz/Katyusha/: 1-01 Katyusha.lrc
compiled/ひとしずくP×やま△/If the World 2/: 1-01 海賊Ｆの肖像.lrc
compiled/上月せれな/家でYeah!ってアゲタイガー/: 1-01 家でYeah!ってアゲタイガー.lrc
scripts/: README.md  lint_lyrics.py
